--- a/package.json
+++ b/package.json
@@ -72,7 +72,11 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon src/server.ts"
+    "dev": "nodemon src/server.ts",
+    "seed": "node prisma/seed.ts"
+  },
+  "prisma": {
+    "seed": "node --loader ts-node/esm prisma/seed.ts"
   },
   "repository": {
     "type": "git",
@@ -88,6 +92,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/node": "^20.3.2",
     "nodemon": "^2.0.22",
     "prisma": "^4.16.0",
     "ts-node": "^10.9.1",
