--- a/package.json
+++ b/package.json
@@ -73,10 +73,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon src/server.ts",
-    "seed": "node prisma/seed.ts"
+    "seed": "node prisma/seed.mjs"
   },
   "prisma": {
-    "seed": "node --loader ts-node/esm prisma/seed.ts"
+    "seed": "node --loader ts-node/esm prisma/seed.mjs"
   },
   "repository": {
     "type": "git",
